# antares-bot

./: .gitignore  README.md  basebot.py  bot_default_cfg.py  bot_inst.py  bot_logging.py  cfg.py  config.ini  context_manager.py  default.nix  example1.py  example2.py  flake.nix  init_hooks.py  main_bot.py  module_loader.py  nix-pyenv.nix  ptb-src.nix  py_requirements.nix  pyproject.toml  requirements.txt  sample_bot_cfg.py  setup.cfg  setup.py  shell.nix  shellhook.nix  sqlite.py  test.sh  text_splitter.py  utils.py
antares_bot/: __main__.py  basic_language.py  bot_base.py  bot_default_cfg.py  bot_inst.py  bot_logging.py  bot_method_wrapper.py  bot_method_wrapper.pyi  callback_manager.py  context.py  context_manager.py  error.py  format_exc.py  framework.py  init_hooks.py  module_analyze_utils.py  module_base.py  module_loader.py  permission_check.py  test_commands.py  text_process.py  text_splitter.py  utils.py
antares_bot/internal_modules/: antares_builtin.py  obj_graph.py
antares_bot/multi_lang/: __init__.py  context.py  lang_meta.py
antares_bot/patching/: application_ex.py  conversation_handler_ex.py  job_quque_ex.py  patch_utils.py
antares_bot/sqlite/: creater.py  manager.py
bot_framework/: bot_base.py  bot_base.pyi  bot_default_cfg.py  bot_inst.py  bot_logging.py  bot_method_wrapper.py  bot_method_wrapper.pyi  botbase.py  callback_manager.py  config.py  context.py  context_manager.py  error.py  framework.py  init_hooks.py  language.py  module_analyze_utils.py  module_base.py  module_loader.py  permission_check.py  utils.py
bot_framework/botabc/: __init__.py  abc.py  command_abc.py  error_handle.py  handle_abc.py  job.py  message.py
bot_framework/internal_modules/: obj_graph.py
bot_framework/locale/: __init__.py  en_US.py  general.py  zh_CN.py
bot_framework/multi_lang/: en.py
bot_framework/patching/: application_ex.py  conversation_handler_ex.py  job_quque_ex.py  patch_utils.py
bot_framework/sqlite/: creater.py  manager.py
bot_framework/utils/: __init__.py  command_callback.py  helper.py  workflow.py
modules/: echo.py  timer.py
test/: ConfigReadTest.py  localeTest.py  mainTest.py
