[metadata]
name = antaresbot
description = Bot Framework by Antares
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Antares0982/telegram-bot-template
author = Antares0982
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
download_url = https://github.com/Antares0982/telegram-bot-template
project_urls =
    Source=https://github.com/Antares0982/telegram-bot-template

[options]
python_requires = >=3.10
setup_requires =
    setuptools-scm
